--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
         <div class="wrapper">
-                <div class="square" ><h3>1</h3></div>
-                <div class="square"><h3>2</h3></div>
-                <div class="square"><h3>3</h3></div>
-                <div class="square"><h3>4</h3></div>
-                <div class="square" ><h3>5</h3></div>
-                <div class="square"><h3>16</h3></div>
-                <div class="square1"><h3>7</h3></div>
-                <div class="square1"><h3>8</h3></div>
-                <div class="square1"><h3>9</h3></div>
-                <div class="square"><h3>6</h3></div>
-                <div class="square"><h3>15</h3></div>
-                <div class="square1"><h3>12</h3></div>
-                <div class="square1" ><h3></h3></div>
+                <div class="square" ></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square" ></div>
+                <div class="square"></div>
+                <div class="square1"></div>
+                <div class="square1"></div>
+                <div class="square1"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square1"></div>
+                <div class="square1" ></div>
                 <div class="square1">14</div>
                 <div class="square">7</div>
                 <div class="square">14</div>
