--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
         <div class="wrapper">
-                <div class="square" ></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square" ></div>
-                <div class="square"></div>
+                <div class="square" ><span class="span1">1</span></div>
+                <div class="square"><div class="recttop"></div>2</div>
+                <div class="square"><div class="recttop"></div>3</div>
+                <div class="square"><div class="recttop"></div>4</div>
+                <div class="square" ><span class="span2">5</span></div>
+                <div class="square"><div class="rectright"></div>16</div>
                 <div class="square1"></div>
                 <div class="square1"></div>
                 <div class="square1"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square"><div class="rectleft"></div>6</div>
+                <div class="square"><div class="rectright"></div>15</div>
                 <div class="square1"></div>
                 <div class="square1" ></div>
-                <div class="square1">14</div>
-                <div class="square">7</div>
-                <div class="square">14</div>
-                <div class="square1">17</div>
-                <div class="square1">18</div>
-                <div class="square1">19</div>
-                <div class="square">8</div>
-                <div class="square" ><span class="rotate3">13</span></div>
-                <div class="square">12</div>
-                <div class="square">11</div>
-                <div class="square">10</div>
-                <div class="square" ><span class="rotate4">9</span></div>
+                <div class="square1"></div>
+                <div class="square"><div class="rectleft"></div>7</div>
+                <div class="square"><div class="rectright"></div>14</div>
+                <div class="square1"></div>
+                <div class="square1"></div>
+                <div class="square1"></div>
+                <div class="square"><div class="rectleft"></div>8</div>
+                <div class="square" ><span class="span4">13</span></div>
+                <div class="square"><div class="rectbott"></div>12</div>
+                <div class="square"><div class="rectbott"></div>11</div>
+                <div class="square"><div class="rectbott"></div>10</div>
+                <div class="square" ><span class="span3">9</span></div>
               </div>
     
 </body>
